// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tour component should render correctly 1`] = `
<body
  class="modal-open"
>
  <p
    class="a11y-speak-intro-text"
    hidden="hidden"
    id="a11y-speak-intro-text"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  >
    Notifications
  </p>
  <div
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="a11y-speak-region"
    id="a11y-speak-assertive"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div
    aria-atomic="true"
    aria-live="polite"
    aria-relevant="additions text"
    class="a11y-speak-region"
    id="a11y-speak-polite"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div>
    <div
      id="first-selector"
    >
      First target element
    </div>
    <div
      id="second-selector"
    >
      Second target element
    </div>
  </div>
  <div
    class="tour-modal__overlay"
  />
  <div
    class="tour-modal"
    style="top: 12px; left: 20px;"
  >
    <button
      aria-label="Close tour modal"
      class="components-button tour-modal__close-button"
      type="button"
    >
      <span
        class="dashicon dashicons dashicons-no-alt"
      />
    </button>
    <img
      alt="Example title"
      class="tour-modal__image"
      height="204"
      src="image.png"
      width="350"
    />
    <div
      class="tour-modal__content"
    >
      <h3>
        Example title
      </h3>
      <p>
        Example description
      </p>
      <footer>
        <div
          class="tour-modal__buttons"
        >
          <button
            class="components-button is-primary"
            type="button"
          >
            Next
          </button>
        </div>
      </footer>
    </div>
  </div>
</body>
`;

exports[`Tour component should render in sticky mode if the given selector is not found 1`] = `
<body
  class="modal-open"
>
  <p
    class="a11y-speak-intro-text"
    hidden="hidden"
    id="a11y-speak-intro-text"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  >
    Notifications
  </p>
  <div
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="additions text"
    class="a11y-speak-region"
    id="a11y-speak-assertive"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div
    aria-atomic="true"
    aria-live="polite"
    aria-relevant="additions text"
    class="a11y-speak-region"
    id="a11y-speak-polite"
    style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
  />
  <div>
    <div
      id="first-selector"
    >
      First target element
    </div>
  </div>
  <div
    class="tour-modal__overlay"
  />
  <div
    class="tour-modal tour-modal--sticky"
    style="top: 0px; left: 0px;"
  >
    <button
      aria-label="Close tour modal"
      class="components-button tour-modal__close-button"
      type="button"
    >
      <span
        class="dashicon dashicons dashicons-no-alt"
      />
    </button>
    <img
      alt="Example title"
      class="tour-modal__image"
      height="204"
      src="image.png"
      width="350"
    />
    <div
      class="tour-modal__content"
    >
      <h3>
        Example title
      </h3>
      <p>
        Example description
      </p>
      <footer>
        <div
          class="tour-modal__buttons"
        >
          <button
            class="components-button is-primary"
            type="button"
          >
            Next
          </button>
        </div>
      </footer>
    </div>
  </div>
</body>
`;
